# example

./: .gitignore  pyproject.toml
example/: configuration.py  ls.py  registry.py
example/app/: payment_case.py
example/model/: person.py
example/rest/: asgi.py  event_send_store_factory.py  person.py
scripts/: check.sh  lint.sh
