[tool.poetry]
name = "example"
version = "0.2.0"
description = ""
authors = ["Ivan Dmitriesvkii <ivan.dmitrievskii@semrush.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
tortoise-orm = {extras = ["asyncpg"], version = "^0.17.2"}
eventual = {path = "../eventual", develop = true}
eventual-rmq = {path = "../eventual-rmq", develop = true}
eventual-tortoise = {path = "../eventual-tortoise", develop = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pytest = "^5.2"
mkautodoc = "^0.1.0"
autoflake = "^1.4"
coverage = "^5.5"
flake8 = "^3.9.1"
flake8-bugbear = "^21.4.3"
flake8-pie = "^0.8.1"
isort = "^5.8.0"
poetry-dev = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true

[tool.black]
target-version = ['py37']
